syntax = "proto3";

package auth;

option go_package = "go-audio-stream/pkg/proto/auth";

service AuthService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  bool is_suspended = 4;
}
